--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
   "private": true,
   "dependencies": {
     "emoji-mart": "^2.11.2",
-    "firebase": "^5.11.1",
+    "firebase": "^7.12.0-0",
     "md5": "^2.2.1",
     "mime-types": "^2.1.26",
     "moment": "^2.24.0",
-    "react": "^16.12.0",
+    "react": "^16.13.0",
     "react-avatar-editor": "^11.0.7",
     "react-color": "^2.18.0",
-    "react-dom": "^16.12.0",
-    "react-redux": "^7.1.0-rc.1",
+    "react-dom": "^16.13.0",
+    "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^1.1.5",
-    "redux": "^4.0.0-rc.1",
+    "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.82.5",
